--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   font-family: "Roboto Condensed", sans-serif;
+  box-sizing: border-box;
 }
 
 a {
@@ -13,6 +14,7 @@ a {
     align-items: center;
     justify-content: space-between;
     padding: 10px;
+    margin-bottom: 20px;
   }
 
   .back-office__link-wrapper > a {
@@ -39,5 +41,47 @@ a {
     background-color: #262473;
     border: none;
     border-radius: 5px;
+  }
+
+  .back-office__character-card-container {
+    width: 90%;
+    background-color: #d2d6d9;
+    margin: auto;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+  .back-office__character-card-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin: 5px;
+  }
+  .back-office__character-card-name {
+    font-size: 120%;
+    font-weight: 700;
+    margin-top: 10px;
+  }
+  .back-office__character-card-type {
+    font-style: italic;
+    font-weight: 600;
+    margin-top: 5px;
+  }
+
+  .back-office__character-card-icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 120%;
+    color: #262473;
   }
 }
