--- a/src/App.css
+++ b/src/App.css
@@ -61,8 +61,8 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 300px;
-    height: 300px;
+    width: 280px;
+    height: 280px;
     object-fit: cover;
     border-radius: 50%;
     margin: 5px;
@@ -84,5 +84,43 @@ a {
     left: 10px;
     font-size: 120%;
     color: #262473;
+  }
+
+  .back-office__boxes-card-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    background-color: #d2d6d9;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    padding: 15px;
+    position: relative;
+  }
+  .back-office__boxes-card-icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: #262473;
+  }
+
+  .back-office__boxes-card-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 180px;
+    height: 180px;
+    object-fit: cover;
+    margin-top: 20px;
+    margin-left: 15px;
+    margin-right: 20px;
+  }
+  .back-office__boxes-card-name {
+    font-size: 100%;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: left;
   }
 }
