--- a/src/App.css
+++ b/src/App.css
@@ -211,4 +211,18 @@ a {
   .back-office_location-form-input {
     margin: 10px 0px;
   }
+
+  .back-office__link-container {
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .back-office__links {
+    background-color: #262473;
+    padding: 8px;
+    color: #fff;
+    border-radius: 5px;
+    margin: 0px 10px;
+  }
 }
