--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
-  font-family: "Roboto Condensed", sans-serif;
   box-sizing: border-box;
+  /* font-family: "Chau Philomene One", sans-serif; */
+  font-family: "Cantora One", sans-serif;
 }
 
 a {
@@ -8,262 +9,354 @@ a {
   text-decoration: none;
 }
 
-@media (min-width: 390px) {
-  .back-office__header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
+.App {
+  padding: 15px;
+}
+body {
+  background-color: #171819;
+}
 
-  .back-office__link-wrapper > a {
-    margin: 0px 10px;
-  }
+.back-office__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+.back-office__logo-wrapper a {
+  color: #fff;
+}
 
-  .back-office__h1 {
-    text-align: center;
-  }
-  .back-office__form {
-    display: flex;
-    flex-direction: column;
-  }
-  .back-office__input {
-    padding: 15px;
-    margin-bottom: 20px;
-    width: 90%;
-    border-radius: 5px;
-  }
-  .back-office__btn {
-    padding: 10px;
-    font-size: 120%;
-    color: #fff;
-    background-color: #262473;
-    border: none;
-    border-radius: 5px;
-  }
+.back-office__link-wrapper > a {
+  margin: 0px 10px;
+  color: #fff;
+  padding: 5px;
+  border: 2px solid transparent;
+  border-radius: 5px;
+}
 
-  .back-office__character-card-container {
-    width: 90%;
-    background-color: #d2d6d9;
-    margin: auto;
-    padding: 15px;
-    display: flex;
-    align-items: center;
-    border-radius: 5px;
-    justify-content: center;
-    flex-direction: column;
-    position: relative;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    margin-bottom: 30px;
-  }
-  .back-office__character-card-img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 280px;
-    height: 280px;
-    object-fit: cover;
-    border-radius: 50%;
-    margin: 5px;
-  }
-  .back-office__character-card-name {
-    font-size: 120%;
-    font-weight: 700;
-    margin-top: 10px;
-  }
-  .back-office__character-card-type {
-    font-style: italic;
-    font-weight: 600;
-    margin-top: 5px;
-  }
+.back-office__link-wrapper > a:hover {
+  border: 2px solid red;
+}
 
-  .back-office__character-card-icon {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: 120%;
-    color: #262473;
-  }
+.back-office__content-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 
-  .back-office__card-trash-icon {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 120%;
-    color: #a60f1b;
-  }
-  .back-office__card-pen-icon {
-    position: absolute;
-    top: 10px;
-    right: 40px;
-    font-size: 120%;
-    color: #262473;
-  }
+.back-office__h1 {
+  text-align: center;
+}
+.back-office__form {
+  display: flex;
+  flex-direction: column;
+}
+.back-office__input {
+  padding: 15px;
+  margin-bottom: 20px;
+  width: 90%;
+  border-radius: 5px;
+}
+.back-office__btn {
+  padding: 10px;
+  font-size: 120%;
+  color: #fff;
+  background-color: #262473;
+  border: none;
+  border-radius: 5px;
+}
 
-  .back-office__boxes-card-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    background-color: #d2d6d9;
-    width: 90%;
-    margin: auto;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    padding: 15px;
-    position: relative;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  }
-  .back-office__boxes-card-icon {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    color: #262473;
-  }
+.back-office__character-card-container {
+  width: 90%;
+  background-color: #333333;
+  margin: auto;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-bottom: 30px;
+  border: 1px solid #d2d6d9;
+}
+.back-office__character-card-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+  height: 280px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin: 5px;
+}
+.back-office__character-card-name {
+  font-size: 120%;
+  font-weight: 700;
+  margin-top: 10px;
+  color: #fff;
+}
+.back-office__character-card-type {
+  font-style: italic;
+  font-weight: 600;
+  margin-top: 5px;
+  color: #fff;
+}
 
-  .back-office__boxes-card-img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 180px;
-    height: 180px;
-    object-fit: cover;
-    margin-top: 20px;
-    margin-left: 15px;
-    margin-right: 20px;
-  }
-  .back-office__boxes-card-name {
-    font-size: 100%;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-align: left;
-  }
-  .back-office__locations-card-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: #d2d6d9;
-    border-radius: 5px;
-    padding: 30px 15px;
-    width: 90%;
-    margin: auto;
-    margin-bottom: 20px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    position: relative;
-  }
+.back-office__character-card-icon {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 120%;
+  color: #d2d6d9;
+}
+.back-office__character-labels {
+  color: #fff;
+}
+.back-office__character-img {
+  margin-bottom: 10px;
+}
 
-  .back-office__locations-card-icon-and-name-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
-  }
+.back-office__card-trash-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 120%;
+  color: #ee171f;
+}
+.back-office__card-pen-icon {
+  position: absolute;
+  top: 10px;
+  right: 40px;
+  font-size: 120%;
+  color: #d2d6d9;
+}
 
-  .back-office__locations-card-icon {
-    top: 0;
-    left: 0;
-    font-size: 200%;
-    margin-right: 20px;
-    color: #262473;
-  }
-  .back-office__locations-card-name {
-    font-size: 120%;
-    font-weight: 700;
-  }
+.back-office__boxes-card-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  background-color: #333333;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  padding: 15px;
+  position: relative;
+  border: 1px solid #d2d6d9;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.back-office__boxes-card-icon {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: #d2d6d9;
+}
 
-  .back-office__locations-card-img {
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
-  }
+.back-office__boxes-card-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 180px;
+  height: 180px;
+  object-fit: cover;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 20px;
+}
+.back-office__boxes-card-name {
+  font-size: 100%;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: left;
+  color: #fff;
+}
+.back-office__locations-card-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #333333;
+  border-radius: 5px;
+  padding: 30px 15px;
+  border: 1px #d2d6d9 solid;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 20px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  position: relative;
+}
 
-  .back-office__character-form-title,
-  .back-office__box-form-title,
-  .back-office__location-form-title {
-    text-align: center;
-  }
-  .back-office__character-form-container,
-  .back-office_box-form-container,
-  .back-office__location-form-container {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    margin: auto;
-  }
-  #characterForm input[type="text"],
-  #characterForm select,
-  #boxForm input[type="text"],
-  #boxForm select,
-  #locationForm input[type="text"],
-  #locationForm select {
-    padding: 10px;
-    margin: 10px 0px;
-  }
+.back-office__locations-card-icon-and-name-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
 
-  .back-office__character-form-btn,
-  .back-office__box-form-btn,
-  .back-office__location-form-btn {
-    padding: 10px;
-    background-color: #262473;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-weight: 700;
-    font-size: 18px;
-    margin-top: 10px;
-  }
+.back-office__locations-card-icon {
+  top: 0;
+  left: 0;
+  font-size: 200%;
+  margin-right: 20px;
+  color: #d2d6d9;
+}
+.back-office__locations-card-name {
+  font-size: 120%;
+  font-weight: 700;
+  color: #fff;
+}
+.back-office__location-form-input {
+  color: #fff;
+}
 
-  .back-office__types-input,
-  .back-office__boxes-input,
-  .back-office__location-form-select-box-container {
-    display: flex;
-    flex-direction: column;
-    margin: 10px 0px;
-  }
-  .back-office__character-form-input,
-  .back-office__box-form-input,
-  .back-office_location-form-input {
-    margin: 10px 0px;
-  }
+.back-office__locations-card-img {
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+}
+.back-office__location-form-box-label,
+.back-office__location-form-name-label,
+.back-office__boxes-form-name-label {
+  color: #fff;
+}
 
-  .back-office__link-container {
-    margin-bottom: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .back-office__links {
-    background-color: #262473;
-    padding: 8px;
-    color: #fff;
-    border-radius: 5px;
-    margin: 0px 10px;
-  }
+.back-office__character-form-title,
+.back-office__box-form-title,
+.back-office__location-form-title {
+  text-align: center;
+  color: #fff;
+}
+.back-office__character-form-container,
+.back-office_box-form-container,
+.back-office__location-form-container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: auto;
+}
+#characterForm input[type="text"],
+#characterForm select,
+#boxForm input[type="text"],
+#boxForm select,
+#locationForm input[type="text"],
+#locationForm select {
+  padding: 10px;
+  margin: 10px 0px;
+}
 
-  .home__card-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: #f2eac2;
-    margin: 10px;
-    padding: 20px;
-    border-radius: 5px;
-  }
+.back-office__character-form-btn,
+.back-office__box-form-btn,
+.back-office__location-form-btn {
+  padding: 10px;
+  background-color: #ee171f;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 18px;
+  margin-top: 10px;
+}
 
-  .home__picture {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 280px;
-    height: 280px;
-    object-fit: cover;
-    border-radius: 50%;
-  }
-  .home__name {
-    text-align: center;
-    font-weight: 700;
-  }
+.back-office__types-input,
+.back-office__boxes-input,
+.back-office__location-form-select-box-container {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0px;
+}
+.back-office__character-form-input,
+.back-office__box-form-input,
+.back-office_location-form-input {
+  margin: 10px 0px;
+}
+
+.back-office__link-container {
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.back-office__links {
+  background-color: #ee171f;
+  padding: 8px;
+  color: #fff;
+  border-radius: 5px;
+  margin: 0px 10px;
+}
+.home__nbPlayer {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.home__input,
+input[type="number"] {
+  padding: 5px;
+  border: 1px #fff solid;
+  border-radius: 5px;
+  color: #333333;
+}
+.home__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ee171f;
+  border: none;
+  border-radius: 5px;
+  padding: 8px;
+  font-size: 16px;
+  color: #fff;
+}
+.home__titles {
+  text-align: center;
+  text-decoration: underline;
+  color: #fff;
+}
+.home__card-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #333333;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 5px;
+  border: #fff 1px solid;
+}
+
+.home__picture {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+  height: 280px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.home__picture-villain {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+  height: 280px;
+  object-fit: cover;
+}
+.home__name {
+  text-align: center;
+  font-weight: 700;
+  font-size: 110%;
+  text-transform: capitalize;
+  color: #fff;
+}
+.home__label {
+  color: #fff;
+}
+
+@media (max-width: 810px) {
 }
