--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  color: #fff;
 }
 
 .back-office__h1 {
@@ -175,6 +176,11 @@ body {
   text-align: left;
   color: #fff;
 }
+.back-office__box-form-label,
+.back-office__location-form-label {
+  color: #fff;
+  margin-top: 10px;
+}
 .back-office__locations-card-container {
   display: flex;
   align-items: center;
@@ -210,7 +216,7 @@ body {
   font-weight: 700;
   color: #fff;
 }
-.back-office__location-form-input {
+input[type="file"] {
   color: #fff;
 }
 
@@ -292,6 +298,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  margin-bottom: 20px;
 }
 
 .home__input,
@@ -311,6 +318,7 @@ input[type="number"] {
   padding: 8px;
   font-size: 16px;
   color: #fff;
+  margin: auto;
 }
 .home__titles {
   text-align: center;
@@ -358,5 +366,108 @@ input[type="number"] {
   color: #fff;
 }
 
-@media (max-width: 810px) {
+@media (min-width: 810px) {
+  .back-office__character-cards-wrapper,
+  .back-office__box-cards-wrapper,
+  .back-office__location-cards-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .back-office__character-card-container {
+    width: 40%;
+    margin: 0 10px 10px 0;
+  }
+  .back-office__character-card-img {
+    width: 200px;
+    height: 200px;
+  }
+  .back-office__character-img {
+    width: 60%;
+    margin: auto;
+    margin-bottom: 10px;
+  }
+  .back-office__boxes-card-container {
+    width: 45%;
+    margin: 0 10px 10px 0;
+  }
+  .back-office__boxes-card-img {
+    width: 150px;
+    height: 150px;
+  }
+  .back-office__box-update-form-img {
+    width: 60%;
+    margin: auto;
+  }
+  .back-office__locations-card-container {
+    width: 40%;
+    margin: 0 10px 10px 0;
+  }
+  .back-office__location-update-form-img {
+    width: 40%;
+    margin: auto;
+  }
+  .home__nbPlayer {
+    width: 100%;
+  }
+  .home__input {
+    width: 70%;
+  }
+  .home__btn {
+    width: 80%;
+  }
+  .home__character-wrapper,
+  .home__location-wrapper,
+  .home__box-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 1220px) {
+  .home__btn {
+    width: 40%;
+    height: 40px;
+  }
+  .back-office__character-card-container,
+  .back-office__boxes-card-container {
+    width: 30%;
+    margin: 0 20px 20px 0;
+  }
+  .back-office__locations-card-container {
+    width: 20%;
+    margin: 0 10px 10px 0;
+  }
+  .back-office__character-cards-wrapper,
+  .back-office__box-cards-wrapper {
+    justify-content: flex-start;
+  }
+  .back-office__character-card-img {
+    width: 300px;
+    height: 300px;
+  }
+  .back-office__character-img {
+    width: 30%;
+  }
+  .back-office__boxes-card-img {
+    width: 280px;
+    height: 280px;
+  }
+  .back-office__box-update-form-img {
+    width: 20%;
+    border-radius: 5px;
+  }
+  .back-office__location-update-form-img {
+    width: 20%;
+  }
+  .home__card-container {
+    width: 30%;
+  }
+  .home__villain-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
